# openenv-data-engineering

./: .gitignore  Dockerfile  README.md  app.py  environment.py  generate_data.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
data/: app_telemetry.csv  crm_contacts.csv  ecommerce_sales.csv  logs.csv  transactions.csv  users.csv
server/: app.py
