[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-data-engineering"
version = "2.0.0"
description = "Advanced Multi-Table Data Engineering Pipeline - AI Evaluation Environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenEnv Team", email = "team@openenv.ai"}
]
keywords = ["openenv", "data-engineering", "ai-evaluation", "machine-learning", "rl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai==1.55.0",
    "pydantic==2.9.2",
    "pandas>=2.0.0",
    "Faker==20.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mec-256/openenv-data-engineering"
Documentation = "https://github.com/mec-256/openenv-data-engineering#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["data*"]
exclude = ["tests*", ".venv*", "__pycache__*"]