[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-data-engineering"
version = "2.0.0"
description = "Advanced Multi-Table Data Engineering Pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "Faker>=20.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = []